--- a/Coffee_Shop/Coffee_Shop/Views/Shared/_Layout.cshtml
+++ b/Coffee_Shop/Coffee_Shop/Views/Shared/_Layout.cshtml
@@ -30,7 +30,7 @@
     <div class="container body-content">
         @RenderBody()
         <hr />
-        <footer>
+        <footer class="footer navbar-fixed-bottom" style="padding-top:50px">
             <p>&copy; @DateTime.Now.Year - Grind Haus</p>
         </footer>
     </div>
